corrección sonar